kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: travelops-backend-service
  namespace: default
spec:
  selector:
    app: travelops-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
