kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: travelops-frontend-service
  namespace: default
spec:
  selector:
    app: travelops-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
